--- a/app/src/main/res/layout/activity_freeness.xml
+++ b/app/src/main/res/layout/activity_freeness.xml
@@ -35,7 +35,7 @@
         android:layout_marginStart="76dp"
         android:layout_marginLeft="76dp"
         android:layout_marginTop="320dp"
-        android:text="Distance"
+        android:text="Distance (mins.)"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,7 +46,7 @@
         android:layout_marginStart="76dp"
         android:layout_marginLeft="76dp"
         android:layout_marginTop="284dp"
-        android:text="Duration"
+        android:text="Duration (mins.)"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -58,7 +58,7 @@
         android:layout_marginLeft="196dp"
         android:layout_marginTop="316dp"
         android:max="100"
-        android:min="10"
+        android:min="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -69,8 +69,8 @@
         android:layout_marginStart="196dp"
         android:layout_marginLeft="196dp"
         android:layout_marginTop="284dp"
-        android:max="100"
-        android:min="10"
+        android:max="300"
+        android:min="30"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
